[package]
name = "omnirun"
version = "1.0.0"
edition = "2021"
description = "run command on many hosts"
authors = ["Radek Podgorny <radek@podgorny.cz>"]
license = "GPL"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
regex = "1.9"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
ctrlc = "3.4"
shellexpand = "3.1"