[package]
name = "omnirun"
version = "1.0.0"
edition = "2021"
description = "run command on many hosts"
authors = ["Radek Podgorny <radek@podgorny.cz>"]
license = "GPL"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
colored = "3.0"
serde_json = "1.0"
tempfile = "3.19"
reqwest = { version = "0.13", features = ["json"] }
ctrlc = "3.4"
shellexpand = "3.1"
